--- a/src/app/features/category/components/categories/categories.component.html
+++ b/src/app/features/category/components/categories/categories.component.html
@@ -37,9 +37,9 @@
 
       <button
         mat-raised-button
-        color = "primary"
-        [disabled] = "this.categoryForm.invalid"
-        (click) = "$event.stopPropagation(); addCategory()"
+        color="primary"
+        [disabled]="this.categoryForm.invalid"
+        (click)="$event.stopPropagation(); addCategory()"
       >
         +
       </button>
@@ -48,7 +48,7 @@
 </mat-accordion>
 </div>
 
-<mat-list role = "list" class = "listCategory" id = "listCategory">
+<mat-list role="list" class="listCategory" id = "listCategory">
   <h1>Active categories</h1>
 
   <table mat-table [dataSource] = "dataSourceActiveCategories" multiTemplateDataRows class = "data-column">
@@ -56,7 +56,7 @@
       <td mat-header-cell *matHeaderCellDef></td>
       <td mat-cell *matCellDef = "let category" class = "modify-table-column">
         <button mat-raised-button class="prodButton" [attr.data-category-name] = "'modifyCategory'+category.name" (click) = "$event.stopPropagation(); modifyCategory(category.id)">
-          <mat-icon> edit </mat-icon>
+          <mat-icon>edit</mat-icon>
         </button>
       </td>
     </ng-container>
@@ -83,7 +83,7 @@
 
     <!-- Expandable -->
     <ng-container matColumnDef = "expand-content">
-      <td mat-cell *matCellDef = "let category" [attr.colspan] = "columnsToDisplay.length">
+      <td mat-cell *matCellDef = "let category" [attr.colspan]="columnsToDisplay.length">
         <div class = "category-detail" [@detailExpand] = "category === categoryExpanded ? 'expanded' : 'collapsed'">
           <div class = "expansionContent">
             <div>
@@ -103,26 +103,26 @@
     <tr mat-row *matRowDef = "let row; columns: columnsToDisplay;"
     [class.expanded-row] = "categoryExpanded === row"
     (click) = "toggleCollapse(row)"></tr>
-    <tr mat-row *matRowDef = "let row; columns: ['expand-content'];" class = "expanded-row-detail"></tr>
+    <tr mat-row *matRowDef = "let row; columns: ['expand-content'];" class="expanded-row-detail"></tr>
   </table>
-  <mat-paginator [length] = "length" [pageSize] = "pageSize" [pageSizeOptions] = "pageSizeOptions" (page) = "pageEvent = $event" aria-label = "Select page"></mat-paginator>
+  <mat-paginator [length] = "lengthActiveCategories" [pageSize] = "pageSize" [pageSizeOptions] = "pageSizeOptionsActiveCategories" (page) = "pageEventActiveCategories = $event" aria-label = "Select page"></mat-paginator>
 
   <br>
   <h1>Inactive categories</h1>
-
+<!--
   <table mat-table [dataSource] = "dataSourceDeActiveCategories" multiTemplateDataRows class = "data-column">
     <ng-container matColumnDef = "edit">
       <td mat-header-cell *matHeaderCellDef></td>
       <td mat-cell *matCellDef = "let category" class = "modify-table-column">
-        <button mat-raised-button class = "prodButton" [attr.data-category-name] = "'modifyCategory'+category.name" (click) = "$event.stopPropagation(); modifyCategory(category.id)">
-          <mat-icon> edit </mat-icon>
+        <button mat-raised-button class="prodButton" [attr.data-category-name] = "'modifyCategory'+category.name" (click)="$event.stopPropagation(); modifyCategory(category.id)">
+          <mat-icon>edit</mat-icon>
         </button>
       </td>
     </ng-container>
     <ng-container matColumnDef = "active">
       <td mat-header-cell *matHeaderCellDef></td>
       <td mat-cell *matCellDef = "let category" class = "active-table-column">
-        <button mat-raised-button class="prodButton" [attr.data-category-name] = "'editActiveCategory'+category.name"  (click) = "$event.stopPropagation(); activeCategory(category)">
+        <button mat-raised-button class="prodButton" [attr.data-category-name] = "'editActiveCategory'+category.name"  (click)="$event.stopPropagation(); activeCategory(category)">
           <mat-icon> autorenew </mat-icon>
         </button>
       </td>
@@ -140,10 +140,9 @@
       <td mat-cell *matCellDef = "let category"></td>
     </ng-container>
 
-    <!-- Expandable -->
     <ng-container matColumnDef = "expand-content">
-      <td mat-cell *matCellDef = "let category" [attr.colspan] = "columnsToDisplay.length">
-        <div class = "category-detail" [@detailExpand] = "category === categoryExpanded ? 'expanded' : 'collapsed'">
+      <td mat-cell *matCellDef = "let category" [attr.colspan]="columnsToDisplay.length">
+        <div class = "category-detail" [@detailExpand]="category === categoryExpanded ? 'expanded' : 'collapsed'">
           <div class = "expansionContent">
             <div>
               <span class = "title-name"> Name: </span>
@@ -160,9 +159,9 @@
 
     <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
     <tr mat-row *matRowDef="let row; columns: columnsToDisplay;"
-    [class.expanded-row] = "categoryExpanded === row"
+    [class.expanded-row]="categoryExpanded === row"
     (click)="toggleCollapse(row)"></tr>
     <tr mat-row *matRowDef="let row; columns: ['expand-content'];" class="expanded-row-detail"></tr>
   </table>
-  <mat-paginator [length] = "length" [pageSize] = "pageSize" [pageSizeOptions] = "pageSizeOptions" (page) = "pageEvent = $event" aria-label="Select page"></mat-paginator>
+  <mat-paginator [length]="length" [pageSize]="pageSize" [pageSizeOptions]="pageSizeOptionsDeActiveCategories" (page)="pageEventDeActiveCategories = $event" aria-label="Select page"></mat-paginator> -->
 </mat-list>
