--- a/src/app/features/category/components/categories/categories.component.html
+++ b/src/app/features/category/components/categories/categories.component.html
@@ -1,70 +1,81 @@
 <div class="formContainer">
-<mat-accordion>
-  <mat-expansion-panel
-    (opened)="panelOpenState = true"
-    (closed)="panelOpenState = false"
-  >
-    <mat-expansion-panel-header>
-      <mat-panel-title>
-        Add category
-        <mat-icon aria-hidden="false" aria-label="Example home icon"
-          >category</mat-icon
+  <mat-accordion>
+    <mat-expansion-panel
+      (opened)="panelOpenState = true"
+      (closed)="panelOpenState = false"
+    >
+      <mat-expansion-panel-header>
+        <mat-panel-title>
+          Add category
+          <mat-icon aria-hidden="false" aria-label="Example home icon"
+            >category</mat-icon
+          >
+        </mat-panel-title>
+      </mat-expansion-panel-header>
+      <form [formGroup]="categoryForm">
+        <mat-form-field>
+          <mat-label>Name</mat-label>
+          <input
+            type="text"
+            matInput
+            formControlName="name"
+            placeholder="Lácteos"
+          />
+          <mat-error>{{ errorMessageName }}</mat-error>
+        </mat-form-field>
+
+        <mat-form-field>
+          <mat-label>Description</mat-label>
+          <input
+            type="text"
+            matInput
+            formControlName="description"
+            placeholder="Productos lácteos"
+          />
+          <mat-error>{{ errorMessageDescription }}</mat-error>
+        </mat-form-field>
+
+        <button
+          mat-raised-button
+          color="primary"
+          [disabled]="this.categoryForm.invalid"
+          (click)="$event.stopPropagation(); addCategory()"
         >
-      </mat-panel-title>
-    </mat-expansion-panel-header>
-    <form [formGroup]="categoryForm">
-      <mat-form-field>
-        <mat-label>Name</mat-label>
-        <input
-          type="text"
-          matInput
-          formControlName="name"
-          placeholder="Lácteos"
-        />
-        <mat-error>{{ errorMessageName }}</mat-error>
-      </mat-form-field>
-
-      <mat-form-field>
-        <mat-label>Description</mat-label>
-        <input
-          type="text"
-          matInput
-          formControlName="description"
-          placeholder="Productos lácteos"
-        />
-        <mat-error>{{ errorMessageDescription }}</mat-error>
-      </mat-form-field>
-
-      <button
-        mat-raised-button
-        color="primary"
-        [disabled]="this.categoryForm.invalid"
-        (click)="$event.stopPropagation(); addCategory()"
-      >
-        +
-      </button>
-    </form>
-  </mat-expansion-panel>
-</mat-accordion>
+          +
+        </button>
+      </form>
+    </mat-expansion-panel>
+  </mat-accordion>
 </div>
 
-<mat-list role="list" class="listCategory" id = "listCategory">
+<mat-list role="list" class="listCategory" id="listCategory">
   <h1>Active categories</h1>
-  <ng-container
-    *ngFor="let category of categories"
-  >
+  <ng-container *ngFor="let category of categories">
     <div class="containerProd">
       <mat-accordion>
         <mat-expansion-panel
           (opened)="panelOpenState = true"
           (closed)="panelOpenState = false"
         >
-          <mat-expansion-panel-header *ngIf="category.active===true" class="category">
+          <mat-expansion-panel-header
+            *ngIf="category.active === true"
+            class="category"
+          >
             <div class="info">
-              <button mat-raised-button class="prodButton" [attr.data-category-name] = "'modifyCategory'+category.name" (click)="$event.stopPropagation(); modifyCategory(category.id)">
+              <button
+                mat-raised-button
+                class="prodButton"
+                [attr.data-category-name]="'modifyCategory' + category.name"
+                (click)="$event.stopPropagation(); modifyCategory(category.id)"
+              >
                 <mat-icon>edit</mat-icon>
               </button>
-              <button mat-raised-button class="prodButton" [attr.data-category-name] = "'editActiveCategory'+category.name" (click)="$event.stopPropagation(); deleteCategory(category)">
+              <button
+                mat-raised-button
+                class="prodButton"
+                [attr.data-category-name]="'editActiveCategory' + category.name"
+                (click)="$event.stopPropagation(); deleteCategory(category)"
+              >
                 <mat-icon> delete_forever </mat-icon>
               </button>
               <mat-panel-title>
@@ -80,8 +91,44 @@
               <mat-list role="list">
                 <mat-list-item role="listItem">
                   <div class="expansionContent">
-                    <span> Name: {{ category.name }} </span>
-                    <span> Description: {{ category.description }} </span>
+                    <div class="primeraColOculta">
+                      <span> Name: {{ category.name }} </span>
+                      <span> Description: {{ category.description }} </span>
+                    </div>
+
+                    <div class="segundaColOculta"></div>
+                    <span> Products: </span>
+                    <mat-chip-list
+                      #chipList
+                      aria-label="Product Selection"
+                      class="product-list">
+                      <ng-container *ngFor="let product of products">
+                        <mat-chip
+                          *ngIf="products"
+                          (removed)="removeProduct(category, product)">
+                          <span>{{ product.name }}</span>
+                          <button matChipRemove>
+                            <mat-icon matChipRemove>cancel</mat-icon>
+                          </button>
+                        </mat-chip>
+                      </ng-container>
+                    </mat-chip-list>
+                    <mat-form-field>
+                      <mat-label>Select product</mat-label>
+                      <mat-select [(value)]="selected">
+                        <mat-option
+                          *ngFor="let product of products"
+                          [value]="product">
+                          {{ product.name }}
+                        </mat-option>
+                      </mat-select>
+                    </mat-form-field>
+                    <button
+                      mat-button
+                      class="prodButton"
+                      (click)="addProduct(category)">
+                      Add
+                    </button>
                   </div>
                 </mat-list-item>
               </mat-list>
@@ -90,25 +137,35 @@
         </mat-expansion-panel>
       </mat-accordion>
     </div>
-
   </ng-container>
-  <br>
+  <br />
   <h1>Inactive categories</h1>
-  <ng-container
-    *ngFor="let category of categories"
-  >
+  <ng-container *ngFor="let category of categories">
     <div class="containerProd">
       <mat-accordion>
         <mat-expansion-panel
           (opened)="panelOpenState = true"
           (closed)="panelOpenState = false"
         >
-          <mat-expansion-panel-header *ngIf="category.active===false" class="category">
+          <mat-expansion-panel-header
+            *ngIf="category.active === false"
+            class="category"
+          >
             <div class="info">
-              <button mat-raised-button class="prodButton" [attr.data-category-name] = "'modifyCategory'+category.name"  (click)="modifyCategory(category.id)">
+              <button
+                mat-raised-button
+                class="prodButton"
+                [attr.data-category-name]="'modifyCategory' + category.name"
+                (click)="modifyCategory(category.id)"
+              >
                 <mat-icon>edit</mat-icon>
               </button>
-              <button mat-raised-button class="prodButton" [attr.data-category-name] = "'editActiveCategory'+category.name"  (click)="$event.stopPropagation(); activeCategory(category)">
+              <button
+                mat-raised-button
+                class="prodButton"
+                [attr.data-category-name]="'editActiveCategory' + category.name"
+                (click)="$event.stopPropagation(); activeCategory(category)"
+              >
                 <mat-icon> autorenew </mat-icon>
               </button>
               <mat-panel-title>
