--- a/src/app/features/product/components/product/product.component.html
+++ b/src/app/features/product/components/product/product.component.html
@@ -171,7 +171,7 @@
                   <mat-icon>edit</mat-icon>
                 </button>
                 <button mat-raised-button class="deleteButton" (click)="$event.stopPropagation(); activeProduct(product)">
-                  <mat-icon>check_circle</mat-icon>
+                  <mat-icon> autorenew </mat-icon>
                 </button>
                 <mat-panel-title>
                   <mat-list-item id = "{{product.name}}ExpansionPanel" role="listitem" class="product">{{
