--- a/src/app/features/shop/components/shops-create/shops-create.component.html
+++ b/src/app/features/shop/components/shops-create/shops-create.component.html
@@ -79,7 +79,9 @@
           </mat-error>
         </mat-form-field>
         <br>
-        <button mat-raised-button class="buttonAdd" color="primary" (click)="addShop()">Añadir</button>
+        <button mat-raised-button class="buttonAdd" color="primary" (click)="addShop()">
+          <mat-icon> add_box </mat-icon>
+        </button>
       </form>
     </mat-expansion-panel>
   </mat-accordion>
