New buttons homogeneized

--- a/src/app/features/authentication/components/sign-in/sign-in.component.scss
+++ b/src/app/features/authentication/components/sign-in/sign-in.component.scss
@@ -17,3 +17,11 @@ form{
   justify-content: center;
   align-items: center;
 }
+#loginButton{
+  background-color: #CC704B;
+}
+
+#loginButton:hover{
+
+  background-color: #b85f3b;
+}
