--- a/src/app/features/shop/components/modify-products-shop/modify-products-shop.component.html
+++ b/src/app/features/shop/components/modify-products-shop/modify-products-shop.component.html
@@ -78,7 +78,7 @@
   >
     Aceptar
   </button>
-  <button mat-raised-button color="accent" (click)="onNoClick()">
+  <button mat-raised-button color="accent" (click)="onNoClick()" id="cancelButton">
     Cancelar
   </button>
 </div>
