--- a/src/app/features/category/components/categories/categories.component.html
+++ b/src/app/features/category/components/categories/categories.component.html
@@ -94,10 +94,11 @@
               <span class = "title-name"> Description: </span>
               <span> {{ category.description }} </span>
             </div>
-            <br>
-            <button mat-raised-button class="viewProducts" color="primary" (click)="openProductList(category)" [attr.data-category-button]="'button_'+category.id">
-                      View products
-            </button>
+            <div>
+              <button mat-raised-button class="viewProducts" color="primary" (click)="openProductList(category)" [attr.data-category-button]="'button_'+category.id">
+                View products
+              </button>
+            </div>
           </div>
         </div>
       </td>
