--- a/src/app/features/category/components/categories/categories.component.scss
+++ b/src/app/features/category/components/categories/categories.component.scss
@@ -49,12 +49,15 @@
 .expansionContent{
   display: flex;
   flex-direction: column;
+  align-items: left;
   span{
     margin: 4em;
   }
   button{
     height: 3em;
-    margin-top: 3em;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    margin-left: 3em;
   }
 }
 
