--- a/src/app/features/category/components/categories/categories.component.html
+++ b/src/app/features/category/components/categories/categories.component.html
@@ -95,7 +95,7 @@
               <span> {{ category.description }} </span>
             </div>
             <div>
-              <button mat-raised-button class="viewProducts" color="primary" (click)="openProductList(category)" [attr.data-category-button]="'button_'+category.id">
+              <button mat-raised-button class="viewProducts"  (click)="openProductList(category)" [attr.data-category-button]="'button_'+category.id">
                 View products
               </button>
             </div>
